map visible on lower resolutions too fix

--- a/css/styles-960.css
+++ b/css/styles-960.css
@@ -5,12 +5,17 @@
         flex-direction: row;
 
     }
+
     #map-container {
         width: 100%;
-        position: relative !important;
-        height: 300px;
-        margin: 20px !important;
-        display: none;
+        position: relative;
+    }
+
+    .inside #map-container {
+        width: 100%;
+        height: 40vh;
+        position: relative;
+        top: 0;
     }
 
     #restaurant-container {
